--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -76,58 +76,20 @@ jobs:
           YETI_TEST_MODULE_KEY: ${{ secrets.YETI_TEST_MODULE_KEY }}
           YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
 
-  tests74MariaDB106:
+  tests74MariaDB:
     runs-on: ubuntu-latest
-    name: PHP 7.4 - MariaDB 10.6
+    strategy:
+      fail-fast: false
+      matrix:
+        vdb: [10.6, 10.7, 10.8, 10.9]
+    name: PHP 7.4 - MariaDB ${{ matrix.vdb }}
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
 
       - name: Tests
-        uses: YetiForceCompany/YetiForceCRM-Tests/mariadb-10.6@main
-        env:
-          YETI_TEST_MODULE_KEY: ${{ secrets.YETI_TEST_MODULE_KEY }}
-          YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
-
-  tests74MariaDB107:
-    runs-on: ubuntu-latest
-    name: PHP 7.4 - MariaDB 10.7
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-
-      - name: Tests
-        uses: YetiForceCompany/YetiForceCRM-Tests/mariadb-10.7@main
-        env:
-          YETI_TEST_MODULE_KEY: ${{ secrets.YETI_TEST_MODULE_KEY }}
-          YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
-
-  tests74MariaDB108:
-    runs-on: ubuntu-latest
-    name: PHP 7.4 - MariaDB 10.8
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-
-      - name: Tests
-        uses: YetiForceCompany/YetiForceCRM-Tests/mariadb-10.8@main
-        env:
-          YETI_TEST_MODULE_KEY: ${{ secrets.YETI_TEST_MODULE_KEY }}
-          YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
-
-  tests74MariaDB109:
-    runs-on: ubuntu-latest
-    name: PHP 7.4 - MariaDB 10.9
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-
-      - name: Tests
-        uses: YetiForceCompany/YetiForceCRM-Tests/mariadb-10.9@main
+        uses: YetiForceCompany/YetiForceCRM-Tests/mariadb-${{ matrix.vdb }}@main
         env:
           YETI_TEST_MODULE_KEY: ${{ secrets.YETI_TEST_MODULE_KEY }}
           YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
