--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -77,6 +77,7 @@ jobs:
           YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
 
   tests74MariaDB106:
+    needs: tests80
     runs-on: ubuntu-latest
     name: PHP 7.4 - MariaDB 10.6
     steps:
@@ -91,6 +92,7 @@ jobs:
           YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
 
   tests74MariaDB107:
+    needs: tests80
     runs-on: ubuntu-latest
     name: PHP 7.4 - MariaDB 10.7
     steps:
@@ -105,6 +107,7 @@ jobs:
           YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
 
   tests74MariaDB108:
+    needs: tests80
     runs-on: ubuntu-latest
     name: PHP 7.4 - MariaDB 10.8
     steps:
@@ -119,6 +122,7 @@ jobs:
           YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
 
   tests74MariaDB109:
+    needs: tests80
     runs-on: ubuntu-latest
     name: PHP 7.4 - MariaDB 10.9
     steps:
@@ -133,6 +137,7 @@ jobs:
           YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
 
   tests74MySQL57:
+    needs: tests80
     runs-on: ubuntu-latest
     name: PHP 7.4 - Percona MySQL 5.7
     steps:
