--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -139,7 +139,7 @@ jobs:
   tests74MySQL57:
     needs: tests80
     runs-on: ubuntu-latest
-    name: PHP 7.4 - Percona MySQL 5.7
+    name: PHP 7.4 - MySQL 5.7 Percona
     steps:
       - uses: actions/checkout@v3
         with:
@@ -147,6 +147,21 @@ jobs:
 
       - name: Tests
         uses: YetiForceCompany/YetiForceCRM-Tests/percona-mysql-5.7@main
+        env:
+          YETI_TEST_MODULE_KEY: ${{ secrets.YETI_TEST_MODULE_KEY }}
+          YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
+
+  tests74MySQLLatest:
+    needs: tests80
+    runs-on: ubuntu-latest
+    name: PHP 7.4 - MySQL Latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Tests
+        uses: YetiForceCompany/YetiForceCRM-Tests/mysql-latest@main
         env:
           YETI_TEST_MODULE_KEY: ${{ secrets.YETI_TEST_MODULE_KEY }}
           YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
