--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -151,17 +151,17 @@ jobs:
           YETI_TEST_MODULE_KEY: ${{ secrets.YETI_TEST_MODULE_KEY }}
           YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
 
-  tests74MySQLLatest:
+  tests74MySQL80:
     needs: tests80
     runs-on: ubuntu-latest
-    name: PHP 7.4 - MySQL Latest
+    name: PHP 7.4 - MySQL 8.0 Percona
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
 
       - name: Tests
-        uses: YetiForceCompany/YetiForceCRM-Tests/mysql-latest@main
+        uses: YetiForceCompany/YetiForceCRM-Tests/percona-mysql-8.0@main
         env:
           YETI_TEST_MODULE_KEY: ${{ secrets.YETI_TEST_MODULE_KEY }}
           YETI_MAIL_PASS: ${{ secrets.YETI_MAIL_PASS }}
