--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,7 @@
     "ezyang/htmlpurifier": "^v4.11.0",
     "simshaun/recurr": "^v5.0",
     "giggsey/libphonenumber-for-php": "^8.8.11",
-    "dg/rss-php": "^1.2",
+    "simplepie/simplepie": "^1",
     "phpoffice/phpspreadsheet": "^1.3.1",
     "pragmarx/google2fa": "^v8",
     "milon/barcode": "^9.0.0",
