--- a/composer.json
+++ b/composer.json
@@ -88,6 +88,7 @@
     "chrome-php/chrome": "^v1.4.0",
     "setasign/fpdf": "1.8.*",
     "setasign/fpdi": "^v2.3.6",
+    "notihnio/php-multipart-form-data-parser": "*",
     "symfony/filesystem": "^v5.4.3"
   },
   "suggest": {
